--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 .vscode/settings.json
 .DS_Store
 DBConnection.java
+/AdminScreen.class
+/LoginScreen.class
+/Main.class
+/MenuScreen.class
+/RegisterScreen.class
+/User.class
+/Voyage.class
+/VoyageScreen.class
